--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,17 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    buildscript {
+
+        repositories {
+
+            google()
+
+            mavenCentral()
+
+        }
+    }
 }
 
 dependencies {
