--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".giris"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".kurumsal"
             android:label="kurumsal" />
